--- a/client/package.json
+++ b/client/package.json
@@ -17,14 +17,18 @@
     "@shadcn/ui": "^0.0.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "ethers": "^6.13.4",
     "framer-motion": "^11.13.1",
+    "gsap": "^3.12.5",
     "lucide-react": "^0.465.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.0.2",
+    "react-toastify": "^10.0.6",
     "tailwind-merge": "^2.5.5",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "web3": "^4.16.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
